# voidminer

./: CHANGELOG.md  DEVELOPMENT_LOG.md  README.md  ROADMAP.md  TODO.md  pyproject.toml  report.md  requirements.txt  results.json
data/: headers_base.txt  params_auth_session.txt  params_base.txt  params_cache_cdn.txt  params_debug.txt  params_lfi_rce.txt  params_mass_assignment.txt  params_mega.txt  params_redirect_ssrf.txt  params_search_filter.txt
docs/: architecture.md  detection_logic.md  ethics.md  usage.md
tests/: test_baseline.py  test_burp_parser.py  test_cli.py  test_diff_engine.py  test_integration_pipeline.py  test_normalizer.py  test_query_miner.py  test_resilience.py  test_scorer.py
voidminer/: __init__.py  cli.py  config.py  main.py  models.py
voidminer/core/: __init__.py  baseline.py  diff_engine.py  injector.py  normalizer.py  requester.py  scorer.py
voidminer/modes/: __init__.py  form_miner.py  header_miner.py  json_miner.py  query_miner.py
voidminer/output/: __init__.py  console.py  json_report.py  markdown_report.py
voidminer/sources/: __init__.py  burp_parser.py  html_parser.py  js_parser.py  wordlist_builder.py
voidminer/utils/: hashing.py  logging.py  randoms.py  timing.py
