[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voidminer"
version = "0.1.0"
description = "Contextual hidden parameter discovery engine for web applications."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "VoidMiner Team" }]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "lxml>=5.2.0",
  "orjson>=3.10.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
voidminer = "voidminer.main:app"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["voidminer*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
